--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "prettier": "prettier --write 'src/**/*.{js,json,ts,tsx,css,scss}'"
+
   },
   "dependencies": {
     "motion": "12.16.0",
@@ -24,6 +26,7 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
+    "prettier": "3.5.3",
     "sass": "1.89.1",
     "vite": "^6.3.5"
   }
