--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "prettier": "prettier --write 'src/**/*.{js,json,ts,tsx,css,scss}'"
-
   },
   "dependencies": {
+    "@react-spring/web": "10.0.1",
     "motion": "12.16.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
